# ros_speed

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/speed_control/: speed_control_node.hpp
launch/: speed_control.launch.py
msg/: RadarDetection.msg  RadarDetections.msg
rviz/: speed_control.rviz
src/: lidar_dummy_publisher.cpp  radar_dummy_publisher.cpp  speed_control_node.cpp
