<?xml version="1.0"?>
<package format="3">
  <name>speed_control</name>
  <version>0.1.0</version>
  <description>Speed control using radar and optional lidar, with RViz visualization</description>

  <maintainer email="keerthana.aruna@gmail.com">Keerthana</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for custom msg type support -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>

